Update Home Page Work Exp Text

--- a/src/index.njk
+++ b/src/index.njk
@@ -76,7 +76,7 @@ layout: 'base.njk'
           </div>
             
           <div class="description">
-              <p>Currently, I manage multiple news websites, handling web development, content updates, technical maintenance, and SEO. Work includes setting up sites, fixing bugs, optimizing performance, and ensuring a smooth CMS experience for seamless publishing.</p>
+              <p>I provide end-to-end technical management for websites, ranging from static HTML builds to high-traffic WordPress publishers. Responsibilities include site architecture & development, bug fixing, speed optimization, and maintaining a smooth workflow for content teams.</p>
           </div>
         </div>
 
