Update Blog Page Text

--- a/src/blog.njk
+++ b/src/blog.njk
@@ -1,5 +1,5 @@
 ---
-title: All Articles by Maroof Lone
+title: Maroof's Blog
 layout: 'base.njk'
 ---
 
@@ -8,7 +8,7 @@ layout: 'base.njk'
   <div class="container">
     
     <div class="blog-header"> 
-        <h1 class="blog-section-title">All Posts</h1>
+        <h1 class="blog-section-title">Maroof's Blog</h1>
         <p class="blog-description">My digital workspace for everything I learn and unlearn. A home for the things I notice, the random thoughts I care to keep, and the unfinished drafts worth saving.</p>
     </div>
 
